--- a/src/pages/Pastors.css
+++ b/src/pages/Pastors.css
@@ -688,3 +688,10 @@
   }
 }
 
+
+@media (min-width: 993px) and (max-width: 1100px) {
+  .leadership-intro-box {
+    padding-top: 2.8rem !important;     /* reduce from 3.6rem */
+    margin-top: -5rem !important;     /* small pull up */
+  }
+}
